--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span id="result">
         </span>
         <br></br>
-    <footer> &#169; This Calculator belongs to Gingercopia </footer>
+    <footer> &#169; Everyone Can Get Rich </footer>
     </body>
    
 </div>
